<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_tabbg"
            android:visibility="visible"
            android:orientation="horizontal">

            <com.hq.uicomponet.changeicontext.ChangeColorIconWithTextView
                android:id="@+id/homeTab"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:changeColorIconViewColor="@color/colorPrimary"
                zhy:changeColorIconViewIcon="@drawable/ic_index"
                zhy:changeColorIconViewText="@string/index"/>

            <com.hq.uicomponet.changeicontext.ChangeColorIconWithTextView
                android:id="@+id/messageTab"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:changeColorIconViewColor="@color/colorPrimary"
                zhy:changeColorIconViewIcon="@drawable/ic_order"
                zhy:changeColorIconViewText="@string/message"
                />
            <!--zhy:changeColorIconViewtext_size="12sp"-->


            <com.hq.uicomponet.changeicontext.ChangeColorIconWithTextView
                android:id="@+id/mineTab"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:changeColorIconViewColor="@color/colorPrimary"
                zhy:changeColorIconViewIcon="@drawable/ic_mine"
                zhy:changeColorIconViewText="@string/mine"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

