<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar"/>

        <TextView style="@style/space"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/phone_no"
                android:textColor="#222222"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/eidt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_phone_no"
                android:inputType="numberSigned"
                android:enabled="false"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView style="@style/line_h"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/text_code"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/vcode"
                android:textColor="#222222"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/eidt_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_passcode"
                android:inputType="numberSigned"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <com.hq.app.olaf.ui.widget.GetCodeButton
                android:id="@+id/getcodebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView style="@style/line_h"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/login_pwd"
                android:textColor="#222222"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/eidt_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_input"
                android:inputType="textPassword"
                android:maxLength="@integer/pwd_maxlength"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <ImageView
                android:id="@+id/eye"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="12dp"
                android:src="@drawable/icon_eye_close"
                android:layout_marginLeft="-32dp"/>
        </LinearLayout>

        <TextView style="@style/space"/>

        <LinearLayout
            android:id="@+id/checkLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/font_size_16"
            android:background="@color/white"
            android:visibility="gone"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_agree"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/selector_checkbox"
                android:button="@null"
                android:visibility="gone"
                android:checked="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="点击注册即同意"/>

            <TextView
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="《卡友商户通业务商户注册协议》"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F3F4F6"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_register"
                style="@style/colorButtonStyle"
                android:text="注册"/>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
