<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_space"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:layout_weight="1"
                android:text="@string/phone_no"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <com.hq.app.olaf.ui.widget.DelPhoneEditText
                android:id="@+id/eidt_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="number"
                android:maxLength="13"
                android:paddingRight="16dp"
                android:layout_weight="3"
                android:hint="@string/hint_phone_no"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView style="@style/line_h"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="4"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/text_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/vcode"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/eidt_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:maxLength="6"
                android:hint="@string/hint_passcode"
                android:inputType="numberSigned"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <com.hq.app.olaf.ui.widget.GetCodeButton
                android:id="@+id/getcodebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView style="@style/line_h"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="4"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:layout_weight="1"
                android:text="@string/new_pwd"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/eidt_pwd"

                android:background="@null"
                android:hint="请填写新密码"
                android:maxLength="@integer/pwd_maxlength"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/showEye"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/icon_eye_close"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_submit"
                style="@style/colorButtonStyle"
                android:stateListAnimator="@null"
                android:text="提  交"/>

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
