<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_space"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/text_code"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/vcode"
                android:textColor="@color/text_label_color"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/eidt_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_passcode"
                android:inputType="numberSigned"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <com.hq.app.olaf.ui.widget.GetCodeButton
                android:id="@+id/getcodebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View style="@style/line_h"/>


        <LinearLayout
            style="@style/input_layout">

            <TextView
                style="@style/input_lable"
                android:text="新登录密码"/>

            <com.hq.app.olaf.ui.widget.DelEditText
                android:id="@+id/newPwd"
                style="@style/input_text"
                android:hint="@string/hint_input"
                android:inputType="textPassword"
                android:maxLength="@integer/pwd_maxlength"
                android:singleLine="true"
                />

            <ImageView
                android:id="@+id/showEye"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="18dp"
                android:src="@drawable/icon_eye_close"/>
        </LinearLayout>


        <Button
            android:id="@+id/commit"
            style="@style/colorButtonStyle"
            android:text="提交"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
